Routing issue resolve in the docs and react ui-kits overview page is display propely.

--- a/docs/ui-kits/react/overview_test.mdx
+++ b/docs/ui-kits/react/overview_test.mdx
@@ -1,9 +1,11 @@
 ---
 sidebar_position: 1
 title: Overview
-sidebar_label: Overview
+sidebar_label: overview_test
 ---
 
 # CometChat UI Kit for React 11
 
 ...rest of your content...
+
+hello
