Updated the custome components.

--- a/react-ui-kits/overview/index.mdx
+++ b/react-ui-kits/overview/index.mdx
@@ -126,12 +126,6 @@ Lorem ipsum dolor sit amet consectetur. Porta a orci elit malesuada. Fusce nulla
 
 
 
-  * Node
-  * npm
-  * React <CodeBadge>npm install react@18.2.0</CodeBadge>
-  * React DOM <CodeBadge>npm install react-dom@18.0.2</CodeBadge>
-
-
 # Bullet Points
 
 1.  Numbered List
@@ -145,12 +139,12 @@ Lorem ipsum dolor sit amet consectetur. Porta a orci elit malesuada. Fusce nulla
 2.  Roman Numerals
     {/* Use an ordered list with a custom class */}
     <ol className='listRomanUpper'>
-      <li>
+      <li className="text-body-1 font-regular">
         Development Lifecycle
         {/* Add the description paragraph inside the list item */}
-        <p className='listDescription'>
+        <div className='listDescription'>
           Plan, design, code, test, deploy
-        </p>
+        </div>
       </li>
       <li>
         Best Practices
