--- a/react-ui-kits/overview/index.mdx
+++ b/react-ui-kits/overview/index.mdx
@@ -16,6 +16,7 @@ import ReactUIKitImg from "./assets/1623200296.png";
 import CodeBadge from '@site/src/components/CodeBadge'; 
 import TabbedCodeBlock from '@site/src/components/TabbedCodeBlock'
 import MuiStyledTable from '@site/src/components/Table'
+import AdditionalResources from '@site/src/components/AdditionalResources'
 
 
 export const userDemoTsCode = `
@@ -48,22 +49,25 @@ export default UsersDemo;
 `;
 
 
-
-
 <StepBlock label="Step 01">
   This is the content for the **first step**. Filters allow you to customize the data displayed
   in a list within a Component. You can filter the list based on your specific criteria,
-  allowing for a more customized. Filters can be applied using `RequestBuilders` of Chat SDK.
+  allowing for a more customized. Filters can be applied using <CodeBadge>RequestBuilders</CodeBadge> of Chat SDK 
+</StepBlock>
+
+<StepBlock label="Step 02">
+  This is the content for the **first step**. Filters allow you to customize the data displayed
+  in a list within a Component. You can filter the list based on your specific criteria,
+  allowing for a more customized. Filters can be applied using <CodeBadge>RequestBuilders</CodeBadge> of Chat SDK 
 </StepBlock>
 
 
-
 :::note
-Lorem ipsum dolor sit amet consectetur. Porta a orci elit malesuada. Fusce nulla quisque erat amet. Scelerisque orci odio ut in nullam vitae gravida aliquam pulvinar. `code sample`
+Lorem ipsum dolor sit amet consectetur. Porta a orci elit malesuada. Fusce nulla quisque erat amet. Scelerisque orci odio ut in nullam vitae gravida aliquam pulvinar.
 :::
 
 :::info
-Lorem ipsum dolor sit amet consectetur. Porta a orci elit malesuada. Fusce nulla quisque erat amet. Scelerisque orci odio ut in nullam vitae gravida aliquam pulvinar. `code sample`
+Lorem ipsum dolor sit amet consectetur. Porta a orci elit malesuada. Fusce nulla quisque erat amet. Scelerisque orci odio ut in nullam vitae gravida aliquam pulvinar. 
 :::
 
 :::success
@@ -71,14 +75,12 @@ This should look the same as TIP. Lorem ipsum dolor sit amet consectetur. Porta 
 :::
 
 :::warning
-Lorem ipsum dolor sit amet consectetur. Porta a orci elit malesuada. Fusce nulla quisque erat amet. Scelerisque orci odio ut in nullam vitae gravida aliquam pulvinar. `code sample`
+Lorem ipsum dolor sit amet consectetur. Porta a orci elit malesuada. Fusce nulla quisque erat amet. Scelerisque orci odio ut in nullam vitae gravida aliquam pulvinar. 
 :::
 
 :::danger
-Lorem ipsum dolor sit amet consectetur. Porta a orci elit malesuada. Fusce nulla quisque erat amet. Scelerisque orci odio ut in nullam vitae gravida aliquam pulvinar. `code sample`
+Lorem ipsum dolor sit amet consectetur. Porta a orci elit malesuada. Fusce nulla quisque erat amet. Scelerisque orci odio ut in nullam vitae gravida aliquam pulvinar.
 :::
-
-
 
  <FeatureShowcase>
   <FeatureCard
@@ -108,7 +110,7 @@ Lorem ipsum dolor sit amet consectetur. Porta a orci elit malesuada. Fusce nulla
 </CheckListItem>
 
 <CheckListItem>
-  Filters can be applied using `RequestBuilders` of Chat SDK. Make sure you understand the different builder types.
+  Filters can be applied using <CodeBadge>RequestBuilders</CodeBadge> of Chat SDK. Make sure you understand the different builder types.
 </CheckListItem>
 
 
@@ -126,8 +128,6 @@ Lorem ipsum dolor sit amet consectetur. Porta a orci elit malesuada. Fusce nulla
   ['setUIDs',` List`, 'used for fetching users containing the passed users'],
 ]}
 />
-
-
 
 
 # Bullet Points
@@ -170,4 +170,6 @@ Lorem ipsum dolor sit amet consectetur. Porta a orci elit malesuada. Fusce nulla
     { label: 'JavaScript', value: 'js', language: 'jsx', code: userDemoJsCode, title: 'UsersDemo.jsx' }
   ]}
 />
+
+<AdditionalResources/>
 
