UI Improvment in Document

--- a/react-kit_versioned_docs/version-1.0/overview/index.mdx
+++ b/react-kit_versioned_docs/version-1.0/overview/index.mdx
@@ -49,6 +49,11 @@ export default UsersDemo;
 `;
 
 
+## Main
+The UI Kit comprises a variety of components, each designed to work seamlessly with one another to deliver a comprehensive and intuitive chat experience. Here's how different UI Kit components work together to achieve CometChat's Core features:
+
+
+
 <StepBlock label="Step 01">
   This is the content for the **first step**. Filters allow you to customize the data displayed
   in a list within a Component. You can filter the list based on your specific criteria,
@@ -81,7 +86,7 @@ Lorem ipsum dolor sit amet consectetur. Porta a orci elit malesuada. Fusce nulla
 :::danger
 Lorem ipsum dolor sit amet consectetur. Porta a orci elit malesuada. Fusce nulla quisque erat amet. Scelerisque orci odio ut in nullam vitae gravida aliquam pulvinar.
 :::
-
+## Main2
  <FeatureShowcase>
   <FeatureCard
     number="01"
