--- a/react-ui-kits/overview/index.mdx
+++ b/react-ui-kits/overview/index.mdx
@@ -49,7 +49,9 @@ export default UsersDemo;
 `;
 
 
-## main
+## Main
+The UI Kit comprises a variety of components, each designed to work seamlessly with one another to deliver a comprehensive and intuitive chat experience. Here's how different UI Kit components work together to achieve CometChat's Core features:
+
 
 
 <StepBlock label="Step 01">
@@ -84,7 +86,7 @@ Lorem ipsum dolor sit amet consectetur. Porta a orci elit malesuada. Fusce nulla
 :::danger
 Lorem ipsum dolor sit amet consectetur. Porta a orci elit malesuada. Fusce nulla quisque erat amet. Scelerisque orci odio ut in nullam vitae gravida aliquam pulvinar.
 :::
-## main2
+## Main2
  <FeatureShowcase>
   <FeatureCard
     number="01"
