--- a/react-ui-kits/overview/index.mdx
+++ b/react-ui-kits/overview/index.mdx
@@ -20,6 +20,8 @@ import MuiStyledTable from '@site/src/components/Table'
 import AdditionalResources from '@site/src/components/AdditionalResources'
 import ImageLightbox from '@site/src/components/ImageLightbox'
 import BottomSpacer from '@site/src/components/BottomSpacer'
+import ExternalLink from '@site/src/components/ExternalLink'
+
 
 export const userDemoTsCode = `
 import { CometChatUsers } from "@cometchat/chat-uikit-react";
@@ -53,7 +55,7 @@ export default UsersDemo;
 
 ## Main
 The UI Kit comprises a variety of components, each designed to work seamlessly with one another to deliver a comprehensive and intuitive chat experience. Here's how different UI Kit components work together to achieve CometChat's Core features:
-
+<ExternalLink href='https://www.cometchat.com/'>External Link</ExternalLink> 
 
 
 <StepBlock label="Step 01">
